<resources>
    <string name="app_name">RM</string>
    <!--<string name="banner_id_1">ca-app-pub-2328589623882503/6020748870</string>-->
    <string name="banner_id_1">ca-app-pub-2328589623882503/3516329879</string>
    <!--<string name="banner_id_2">ca-app-pub-2328589623882503/9749731589</string>-->
    <string name="banner_id_5">ca-app-pub-2328589623882503/4087175513</string>
    <!--<string name="banner_id_3">ca-app-pub-2328589623882503/4484020511</string>-->
    <string name="banner_id_3">ca-app-pub-2328589623882503/9507023155</string>

    <string name="banner_full">ca-app-pub-2328589623882503/6780201705</string>

    <string name="banner_appotax">/21617015150/5188250/21767195692</string>

    <string name="full_appotax">/21617015150/5188250/21767232374</string>

    <string name="video_appotax">/21617015150/5188250/21767295766</string>

    <!--Tab main-->
    <string name="txt_thanhvien">Thành viên</string>
    <string name="txt_gif_hay">Gif</string>
    <string name="txt_khachmoi">Khách mời</string>
    <string name="txt_video">Video</string>
    <string name="txt_khac">Khác</string>

    <!--Khach moi-->

    <string name="txt_ep">Tập</string>

    <!--Rank screen-->
    <string name="txt_bxh">Bảng xếp hạng yêu thích</string>
    <string name="txt_huongdan">Hướng dẫn vote</string>
    <string name="txt_huongdan_1">- Click vào màn hình thông tin của mỗi thành viên</string>
    <string name="txt_huongdan_2">- Click vào hình trái tim để vote</string>
    <string name="txt_huongdan_3">- Mỗi ngày vào app bạn sẽ có 1 lượt vote</string>
    <string name="txt_huongdan_4">- Ngoài ra bạn cũng có thêm lượt vote khi nhấn vào nút hộp quà và xem quảng cáo</string>
    <string name="txt_huongdan_5">(Thời gian xem quảng cáo phải lớn hơn 7 giây mới được tính)</string>

    <!--Video Ads-->

    <string name="txt_videoad">Xem quảng cáo để nhận thêm 1 lượt vote cho</string>
    <string name="txt_btn_huy">HỦY</string>
    <string name="txt_btn_ok">OK</string>


    <!--Other screen-->
    <string name="txt_btn_cong_dong">Cộng đồng</string>
    <string name="txt_btn_danh_gia">Đánh giá ứng dụng</string>
    <string name="txt_btn_phan_hoi">Phản hồi, góp ý</string>
    <string name="txt_btn_ung_dung">Ứng dụng khác</string>

    <!--App Other-->
    <string name="txt_cung_nha_phat_trien">Cùng nhà phát triển</string>
    <string name="txt_ten_ung_dung">Hình nền BTS HD+</string>
    <string name="txt_cai_dat">Cài đặt</string>


    <!--Dialog cong dong-->
    <string name="txt_title_dialog_congdong">Xin lỗi</string>
    <string name="txt_content_dialog_congdong">Tính năng đang được phát triển và sẽ có trong bản cập nhật tiếp theo.</string>

</resources>
