<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:padding="16dp"
            android:src="@drawable/ic_back" />

    </TableRow>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_weight="1"
        android:background="@drawable/bg_dialog"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_huongdan"
            android:textColor="@color/colorNau"
            android:textSize="22dp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/txt_huongdan_1"
                    android:textColor="@color/colorNau"
                    android:textSize="18dp" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/txt_huongdan_2"
                        android:textColor="@color/colorNau"
                        android:textSize="18dp" />

                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginLeft="5dp"
                        android:src="@drawable/ic_heart" />

                </TableRow>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/txt_huongdan_3"
                    android:textColor="@color/colorNau"
                    android:textSize="18dp" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/txt_huongdan_4"
                        android:textColor="@color/colorNau"
                        android:textSize="18dp" />

                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginLeft="5dp"
                        android:src="@drawable/ic_gift_blue" />

                </TableRow>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/txt_huongdan_5"
                    android:textColor="@color/colorNau"
                    android:textStyle="italic"
                    android:textSize="16dp" />


            </LinearLayout>


        </ScrollView>


    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_id_5">

    </com.google.android.gms.ads.AdView>

</LinearLayout>