<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="16dp"
    android:background="@drawable/bg_dialog"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/colorNau"
        android:textSize="18dp"
        android:text="@string/txt_title_dialog_congdong"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/img_dialog"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_margin="16dp"
        android:textColor="@color/colorNau"
        android:gravity="center"
        android:text="@string/txt_content_dialog_congdong"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/btn_dialog_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:paddingRight="32dp"
            android:paddingLeft="32dp"
            android:background="@drawable/bg_btn_huy"
            android:gravity="center"
            android:text="@string/txt_btn_ok"
            android:textStyle="bold" />


    </TableRow>

</LinearLayout>