<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorSplash">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:padding="16dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:text="@string/txt_cung_nha_phat_trien"
            android:textColor="@color/colorNau"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:padding="16dp" />

    </TableRow>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center">

            <ImageView
                android:layout_width="84dp"
                android:layout_height="84dp"
                android:padding="16dp"
                android:src="@drawable/icon_app_bts" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:text="@string/txt_ten_ung_dung"
                android:textColor="@color/colorNau"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/btn_install"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/bg_btn_ok"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp"
                android:text="@string/txt_cai_dat" />

        </TableRow>

    </LinearLayout>


    <com.google.android.gms.ads.doubleclick.PublisherAdView
        android:id="@+id/publisherAdView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_appotax">

    </com.google.android.gms.ads.doubleclick.PublisherAdView>


</LinearLayout>