<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:background="@drawable/bg_other"
        android:orientation="vertical">

        <TableRow android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="16dp"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:id="@+id/btn_cong_dong"
            android:background="@drawable/bg_other_1">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:civ_border_color="@color/colorNau"
                app:civ_border_width="2dp"
                android:src="@drawable/ic_cong_dong"/>

            <TextView android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:text="@string/txt_btn_cong_dong"
                android:textColor="@color/colorNau"
                android:textStyle="bold"
                android:layout_marginLeft="16dp"
                android:textSize="22dp" />

        </TableRow>

        <TableRow android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="16dp"
            android:padding="8dp"
            android:id="@+id/btn_danh_gia"
            android:background="@drawable/bg_other_1">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:civ_border_color="@color/colorNau"
                app:civ_border_width="2dp"
                android:src="@drawable/ic_danh_gia"/>

            <TextView android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:layout_marginLeft="16dp"
                android:textSize="22dp"
                android:textColor="@color/colorNau"
                android:textStyle="bold"
                android:text="@string/txt_btn_danh_gia"/>

        </TableRow>

        <TableRow android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="16dp"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:id="@+id/btn_phan_hoi"
            android:background="@drawable/bg_other_1">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:civ_border_color="@color/colorNau"
                app:civ_border_width="2dp"
                android:src="@drawable/ic_mail"/>

            <TextView android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:layout_marginLeft="16dp"
                android:textSize="22dp"
                android:textColor="@color/colorNau"
                android:textStyle="bold"
                android:text="@string/txt_btn_phan_hoi"/>

        </TableRow>

        <TableRow android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="16dp"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:id="@+id/btn_ung_dung_khac"
            android:background="@drawable/bg_other_1">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:civ_border_color="@color/colorNau"
                app:civ_border_width="2dp"
                android:src="@drawable/ic_app_khac"/>

            <TextView android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:layout_marginLeft="16dp"
                android:textSize="22dp"
                android:textColor="@color/colorNau"
                android:textStyle="bold"
                android:text="@string/txt_btn_ung_dung"/>

        </TableRow>


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>